--- a/merged_table.html
+++ b/merged_table.html
@@ -13,9 +13,9 @@
 <body>
 <table>
   <tr>
-    <td class="title" rowspan="3" style="width:23%">1. 신청인</td>
-    <td class="normal" style="width:21%">성명</td>
-    <td colspan="3" style="width:56%"></td>
+    <td class="title" rowspan="3" style="width:11%">1. 신청인</td>
+    <td class="normal" style="width:10%">성명</td>
+    <td colspan="3" style="width:79%"></td>
   </tr>
   <tr>
     <td class="normal">제조소(영업소) 명칭</td>
@@ -30,70 +30,70 @@
     <td class="title" colspan="3">3. 신청 유형(AR, IR, Cmin, Cmaj 중 선택)</td>
   </tr>
   <tr>
-    <td colspan="2" class="normal">&lt;변경유형 제목&gt;</td>
-    <td colspan="3" class="normal">&lt;신청유형 분류 및 설명&gt;</td>
+    <td colspan="2" class="normal"></td>
+    <td colspan="3" class="normal"></td>
   </tr>
   <tr>
     <td class="title" colspan="3">4. 충족조건</td>
     <td class="title" colspan="2">조건 충족 여부(○, X 중 선택)</td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;충족조건 항목1&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td colspan="2" class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;충족조건 항목2&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td colspan="2" class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;충족조건 항목3&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td colspan="2" class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;충족조건 항목4&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td colspan="2" class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;충족조건 항목5&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td colspan="2" class="normal"></td>
   </tr>
   <tr>
     <td class="title" colspan="3">5. 필요서류 (해당하는 필요서류 기재)</td>
-    <td class="title" style="width:12%">구비 여부 (○, X 중 선택)</td>
-    <td class="title" style="width:20%">해당 페이지 표시</td>
+    <td class="title" style="width:8%">구비 여부<br>(○, X 중 선택)</td>
+    <td class="title" style="width:13%">해당 페이지 표시</td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류1&gt;</td>
-    <td class="normal"></td>
-    <td class="normal"></td>
-  </tr>
-  <tr>
-    <td colspan="3" class="normal">&lt;필요서류2&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류3&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류4&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류5&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류6&gt;</td>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
   <tr>
-    <td colspan="3" class="normal">&lt;필요서류7&gt;</td>
+    <td colspan="3" class="normal"></td>
+    <td class="normal"></td>
+    <td class="normal"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="normal"></td>
     <td class="normal"></td>
     <td class="normal"></td>
   </tr>
